Modified Request.extractQueryParameters() to return Fields.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>